:sparkles:[FEAT] 회원삭제 API, SWAGGER
